--- a/src/index.jade
+++ b/src/index.jade
@@ -3,7 +3,7 @@ html
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    title Signal Processing 101
+    title A distributed orchestra
 
     link(rel='stylesheet', type='text/css', href='build/build.css')
 
@@ -111,25 +111,25 @@ html
       section
         h2 This is your brain on
         h2 Perceptual Audio
-        h4 With your host Myles Borins
+        h4 With your host
         h4
-          a(href='https://twitter.com/thealphanerd') @thealphanerd
-        p  QueensJS October 2016
+          a(href='https://twitter.com/thealphanerd') @MylesBorins
+        p  Revolution Conf 2016
 
       section(data-bespoke-backdrop='hello')
         h1 Hello There
-        
+
       section
         h1 My Name is Myles
-        img.headroom(src='images/me.jpg' alt='itsa me!' width='200px')
+        img.headroom(src='images/me.jpg' alt='itsa me!' width='200px' height='200px')
       
       section
-        h3 I currently work at a small disruptive startup called IBM
-        h4 contributing to node.js
+        h3 I am gainfully employed by Google as a Developer Advocate
+        h4 Focusing on the Node.js ecosystem running on GCP
         
-        img.headroom(src='images/ibm.jpg' alt='Eye Bee M by Paul Rand')
+        img(src='images/gcp.png' alt='Google Clud Platform' style='background-color:white;')
         
-        h5 The opinions expressed in this talk are soley my own
+        h5.headroom The opinions expressed in this talk are solely my own
         
       section(data-bespoke-backdrop='krang')
         h1 How does our brain interpret sound?
@@ -294,119 +294,119 @@ html
       section
         iframe(src='./examples/resamplr/index.html' class='demo-iframe')
       
-      //- section
-      //-   h2 Playing the original
-      //-   pre
-      //-     code.language-javascript.
-      //-       function original() {
-      //-         async.waterfall([
-      //-           loadUrl.bind(null, 'put-url-hurr'),
-      //-           playBuffer
-      //-         ]);
-      //-       }
-      //-
-      //- section
-      //-   h2 Playing the Resampled Version
-      //-   pre
-      //-     code.language-javascript.
-      //-       function downsampled() {
-      //-         async.waterfall([
-      //-           loadUrl.bind(null, 'put-url-hurr'),
-      //-           resample,
-      //-           playBuffer
-      //-         ]);
-      //-       }
-      //-
-      //- section
-      //-   pre
-      //-     code.language-javascript.
-      //-       // http://www.html5rocks.com/en/tutorials/webaudio/intro/
-      //-       function loadUrl(url, next) {
-      //-         var request = new XMLHttpRequest();
-      //-         request.open('GET', url, true);
-      //-         request.responseType = 'arraybuffer';
-      //-         request.onload = function() {
-      //-           context.decodeAudioData(request.response, function (buffer) {
-      //-             next(null, buffer);
-      //-           });
-      //-         };
-      //-         request.send();
-      //-       }
-      //-
-      //- section
-      //-   pre
-      //-     code.language-javascript.
-      //-       function playBuffer(buffer/*, next*/) {
-      //-         var source = context.createBufferSource();
-      //-         source.buffer = buffer;
-      //-         source.connect(context.destination);
-      //-         source.start(0);
-      //-       }
-      //-
-      //- section
-      //-   pre
-      //-     code.language-javascript.
-      //-       function resample(buffer, next) {
-      //-         var frameCount = buffer.length
-      //-           * resampleRate / buffer.sampleRate;
-      //-         var offlineContext = new OfflineAudioContext(
-      //-           buffer.numberOfChannels, frameCount, resampleRate);
-      //-         var bufferSource = offlineContext.createBufferSource();
-      //-         bufferSource.buffer = buffer;
-      //-         bufferSource.connect(offlineContext.destination);
-      //-         bufferSource.start();
-      //-         offlineContext.startRendering().then(function (renderedBuffer) {
-      //-           next(null, renderedBuffer);
-      //-         });
-      //-       }
+      section
+        h2 Playing the original
+        pre
+          code.language-javascript.
+            function original() {
+              async.waterfall([
+                loadUrl.bind(null, 'put-url-hurr'),
+                playBuffer
+              ]);
+            }
+
+      section
+        h2 Playing the Resampled Version
+        pre
+          code.language-javascript.
+            function downsampled() {
+              async.waterfall([
+                loadUrl.bind(null, 'put-url-hurr'),
+                resample,
+                playBuffer
+              ]);
+            }
+
+      section
+        pre
+          code.language-javascript.
+            // http://www.html5rocks.com/en/tutorials/webaudio/intro/
+            function loadUrl(url, next) {
+              var request = new XMLHttpRequest();
+              request.open('GET', url, true);
+              request.responseType = 'arraybuffer';
+              request.onload = function() {
+                context.decodeAudioData(request.response, function (buffer) {
+                  next(null, buffer);
+                });
+              };
+              request.send();
+            }
+
+      section
+        pre
+          code.language-javascript.
+            function playBuffer(buffer/*, next*/) {
+              var source = context.createBufferSource();
+              source.buffer = buffer;
+              source.connect(context.destination);
+              source.start(0);
+            }
+
+      section
+        pre
+          code.language-javascript.
+            function resample(buffer, next) {
+              var frameCount = buffer.length
+                * resampleRate / buffer.sampleRate;
+              var offlineContext = new OfflineAudioContext(
+                buffer.numberOfChannels, frameCount, resampleRate);
+              var bufferSource = offlineContext.createBufferSource();
+              bufferSource.buffer = buffer;
+              bufferSource.connect(offlineContext.destination);
+              bufferSource.start();
+              offlineContext.startRendering().then(function (renderedBuffer) {
+                next(null, renderedBuffer);
+              });
+            }
 
       section
         h2 http://kni.sh/voxelMeterJS/
         iframe.headroom(src='examples/voxel-meter' class='demo-iframe')
         a(href='https://github.com/TheAlphaNerd/voxel-meter-js/') View the Project on Github
 
-      //- section
-      //-   pre
-      //-     code.language-javascript.
-      //-       function Audio() {
-      //-         this.context =
-      //-           new (window.AudioContext || window.webkitAudioContext)();
-      //-         this.analyzer = this.context.createAnalyser();
-      //-         this.frequencyData = new Uint8Array(256);
-      //-
-      //-         wireMic(this.context, this.analyzer);
-      //-
-      //-         return this;
-      //-       }
-      //-
-      //- section
-      //-   pre
-      //-     code.language-javascript.
-      //-       function wireMic(audioContext, analyzer) {
-      //-         function gotStream(stream) {
-      //-           // Create an AudioNode from the stream.
-      //-           var mediaStreamSource =
-      //-             audioContext.createMediaStreamSource(stream);
-      //-
-      //-           // Connect it to the destination to hear
-      //-           // yourself (or any other node for processing!)
-      //-           mediaStreamSource.connect(analyzer);
-      //-         }
-      //-
-      //-         navigator.getUserMedia = /*shim*/
-      //-         navigator.getUserMedia({audio: true},
-      //-           gotStream, function (err) {
-      //-           console.log(err);
-      //-         });
-      //-       }
-      //-
-      //- section
-      //-   pre
-      //-     code.language-javascript.
-      //-       Audio.prototype.getFFT = function () {
-      //-         this.analyzer.getByteFrequencyData(this.frequencyData);
-      //-         return this.frequencyData;
-      //-       };
+      section
+        pre
+          code.language-javascript.
+            function Audio() {
+              this.context =
+                new (window.AudioContext || window.webkitAudioContext)();
+              this.analyzer = this.context.createAnalyser();
+              this.frequencyData = new Uint8Array(256);
+
+              wireMic(this.context, this.analyzer);
+
+              return this;
+            }
+
+      section
+        pre
+          code.language-javascript.
+            function wireMic(audioContext, analyzer) {
+              function gotStream(stream) {
+                // Create an AudioNode from the stream.
+                var mediaStreamSource =
+                  audioContext.createMediaStreamSource(stream);
+
+                // Connect it to the destination to hear
+                // yourself (or any other node for processing!)
+                mediaStreamSource.connect(analyzer);
+              }
+
+              navigator.getUserMedia = /*shim*/
+              navigator.getUserMedia({audio: true},
+                gotStream, function (err) {
+                console.log(err);
+              });
+            }
+
+      section
+        pre
+          code.language-javascript.
+            Audio.prototype.getFFT = function () {
+              this.analyzer.getByteFrequencyData(this.frequencyData);
+              return this.frequencyData;
+            };
 
       section
         h2 http://harmonic.kni.sh/
@@ -426,20 +426,20 @@ html
       section
         img.headroom(src='images/fourier_flute_violin.png' alt='harmoic series of a flute and violin' height='80%')
 
-      //- section
-      //-   pre
-      //-     code.language-javascript.
-      //-       var context =
-      //-         new (window.AudioContext || window.webkitAudioContext)();
-      //-
-      //-       var base = 55;
-      //-       var overtone = Math.floor(Math.random() * 15) + 1;
-      //-       var freq = base * overtone;
-      //-       var osc = context.createOscillator();
-      //-
-      //-       osc.frequency.value = freq;
-      //-       osc.connect(context.destination);
-      //-       osc.start();
+      section
+        pre
+          code.language-javascript.
+            var context =
+              new (window.AudioContext || window.webkitAudioContext)();
+
+            var base = 55;
+            var overtone = Math.floor(Math.random() * 15) + 1;
+            var freq = base * overtone;
+            var osc = context.createOscillator();
+
+            osc.frequency.value = freq;
+            osc.connect(context.destination);
+            osc.start();
 
       section
         img(src='images/double.jpg' alt='as frequency increases exponentially, how we experience pitch increases linearly' width="80%")
@@ -497,7 +497,6 @@ html
       section
         h2 Thank You
         img.headroom(src='images/best-gif-evar.gif' alt='a surfing puppy' width='20%')
-        h3 Myles Borins
-        h4 @thealphanerd
+        h3 @MylesBorins
 
     script(src='build/build.js')
